# decimate

./: .gitignore  CODEOWNERS  Cargo.toml  LICENSE  LICENSE-APACHE  PRODUCT.md  README.md  SECURITY.md  package-lock.json  package.json
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: issue-types.md
npm/scripts/: postinstall.js  test-npx-local.js  test-npx-mcp-local.js  test-npx-prebuilt.js  test-postinstall-prebuilt.js
scripts/: check-dart-decimate-migration.mjs  check-pr-version-bump.mjs  check-release-version.mjs  check-version-sync.mjs
src/: baseline.rs  boundaries.rs  changed_scope.rs  ci_template.rs  cli.rs  config.rs  coverage.rs  dart_parser.rs  decision_surface.rs  dependencies.rs  dependency_scripts.rs  dupes.rs  explain.rs  extract.rs  feature_flags.rs  finding_identity.rs  fix.rs  generated.rs  graph.rs  health.rs  hooks.rs  impact.rs  init.rs  inspect.rs  intelligence.rs  lib.rs  main.rs  manifest.rs  mcp.rs  output.rs  package_map.rs  policy.rs  project_list.rs  report_schema.rs  routes.rs  scan.rs  security.rs  security_gate.rs  symbols.rs  trace.rs  (+3 more)
src/boundaries/: tests.rs
src/cli/: analyze.rs  analyzer_options.rs  audit_run.rs  (+40 more)
tests/: ci_version_gate.rs  cli_action_contract.rs  cli_audit.rs  cli_augment.rs  cli_baseline.rs  cli_boundaries.rs  cli_cache_config.rs  cli_changed_since.rs  cli_ci_template.rs  cli_config.rs  cli_config_path.rs  cli_config_schema.rs  cli_decision_surface.rs  cli_default_command.rs  cli_dependencies.rs  cli_dupes.rs  cli_error_output.rs  cli_explain.rs  cli_file_scope.rs  cli_fix.rs  cli_flags.rs  cli_health.rs  cli_health_threshold_overrides.rs  cli_hooks.rs  cli_impact.rs  cli_include_entry_exports.rs  cli_init.rs  cli_inspect.rs  cli_issue_filters.rs  cli_list.rs  cli_manual_riverpod_provider.rs  cli_mcp.rs  cli_mcp_runtime.rs  cli_members.rs  cli_part_of.rs  cli_policy.rs  cli_primary_constructors.rs  cli_private_src_import.rs  cli_private_type_leak.rs  cli_private_widget_class.rs  (+26 more)
(+95 files in other folders)
