[package]
name = "dart-decimate"
version = "0.0.4"
edition = "2024"
rust-version = "1.85"
description = "Rust-native codebase intelligence for Dart and Flutter module graphs."
license = "MIT"
repository = "https://github.com/sgaabdu4/dart-decimate"
homepage = "https://github.com/sgaabdu4/dart-decimate#readme"
readme = "README.md"
keywords = ["dart", "flutter", "static-analysis", "code-intelligence"]
categories = ["command-line-utilities", "development-tools"]
publish = false
include = ["/Cargo.toml", "/Cargo.lock", "/README.md", "/LICENSE", "/src/**"]

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions"] }
glob = "0.3"
petgraph = "0.8"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
toml = "1.1"
tree-sitter = "0.26"
tree-sitter-dart = "0.2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
dbg_macro = "warn"
expect_used = "warn"
todo = "warn"
unwrap_used = "warn"
